atualizando html ejs

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                                 <div class="area_content_comunication">
                                     <div class="midia">
                                         <h1>Redes Socias:</h1>
-                                        <a href=""><img></a>
+                                        <a class="links"><img src=""></a>
                                     </div>
                                     <div class="phone">
                                         <h1>Telefone:</h1>
