--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                     </div>
                                     <div class="filtro_cidade">
                                         <input type="radio" name="cidade">
-                                        <label>Agrolândia</label>                               
+                                        <label>Agrolândia</label>
                                     </div>
                                 </div>
                             </div>
@@ -108,7 +108,7 @@
         <div class="conteiner">
             <div class="conteiner_conteudo">
                 <div class="area">
-                    <div class="area_conteudo sm" >
+                    <div class="area_conteudo sm">
                         <div class="area_img">
                             <img src="/img/logos/aj.png " alt="Logo da Farmacia aj venturi">
                         </div>
@@ -184,7 +184,8 @@
                 <div class="modalc">
                     <div class="area_content_open">
                         <div class="area_content_return">
-                            <img class="fechar_modal" src="img/icones/setadireita.jpg" alt="imagem com uma seta para direita">
+                            <img class="fechar_modal" src="img/icones/setadireita.jpg"
+                                alt="imagem com uma seta para direita">
                             <h1>Star Descontos</h1>
                         </div>
                         <div class="area_content_img">
@@ -208,7 +209,8 @@
                                 <div class="area_content_comunication">
                                     <div class="midia">
                                         <h1>Redes Socias:</h1>
-                                        <a class="links"><img src=""></a>
+                                        <a class="links" href=""><img src="img/icones/insta.png"></a>
+                                        <a class="links" href=""><img src="img/icones/whats.png"></a>
                                     </div>
                                     <div class="phone">
                                         <h1>Telefone:</h1>
@@ -223,9 +225,9 @@
                             </div>
                         </div>
                         <button>Entrar em contato</button>
-                    </div>    
                     </div>
                 </div>
+            </div>
         </div>
     </main>
 
