--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
                                 <div class="area_content_comunication">
                                     <div class="midia">
                                         <h1>Redes Socias:</h1>
-                                        <a class="links" href=""><img src="img/icones/insta.png"></a>
-                                        <a class="links" href=""><img src="img/icones/whats.png"></a>
+                                        <a class="links" href=""><img src="img/icones/insta.png" width="30px"></a>
+                                        <a class="links" href=""><img src="img/icones/whats.png" width="30px"></a>
                                     </div>
                                     <div class="phone">
                                         <h1>Telefone:</h1>
