--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </div>
                     <div class="area_conteudo">
                         <div class="area_img">
-                            <img src="img/logos/aj.png">
+                            <img src="img/logos/esquina.jpg">
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Esquina</h1>
@@ -189,7 +189,7 @@
                             <h1>Star Descontos</h1>
                         </div>
                         <div class="area_content_img">
-                            <img src="img/logos/aj.png" alt="logo da farmacia aj venturi">
+                            <img class="img_troca" src="" alt="">
                         </div>
                         <div class="area_content_text">
                             <div class="area_content_name">
