--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                                     <div class="midia">
                                         <h1>Redes Socias:</h1>
                                         <a class="links" href=""><img src="img/icones/insta.png" width="30px"></a>
-                                        <a class="links" href=""><img src="img/icones/whats.png" width="30px"></a>
+                                        <a class="links2" href=""><img src="img/icones/whats.png" width="30px"></a>
                                     </div>
                                     <div class="phone">
                                         <h1>Telefone:</h1>
