--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                             <img src="AJ VENTURI-02.png">
                         </div>
                         <div class="area_text">
-                            <h1>Nome: Aj venturi</h1>
-                            <h1>Tipo: Farmacia</h1>
+                            <h1 class="p">Nome: Doce Delicia</h1>
+                            <h1>Tipo: Lanchonete</h1>
                         </div>
                     </div>
                     <div class="area_conteudo">
@@ -140,8 +140,8 @@
                             <img src="AJ VENTURI-02.png">
                         </div>
                         <div class="area_text">
-                            <h1>Nome: Aj venturi</h1>
-                            <h1>Tipo: Farmacia</h1>
+                            <h1>Nome: Doce Delicia</h1>
+                            <h1>Tipo: Lanchonete</h1>
                         </div>
                     </div>
                     <div class="area_conteudo">
