--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     </div>
                     <div class="area_conteudo">
                         <div class="area_img">
-                            <img src="AJ VENTURI-02.png">
+                            <img src="img/logos/docedelicia.jpg">
                         </div>
                         <div class="area_text">
                             <h1>Nome: Doce Delicia</h1>
