--- a/pages/stardescontos.html
+++ b/pages/stardescontos.html
@@ -57,7 +57,7 @@
                     </p>
                 </div>
                 <div class="button_cadastro">
-                    <button>Entre em contato</button>
+                    <button><a href="https://wa.me/5547984910058?text=Olá,%20quero%20mais%20informações!">Enre em Contato</a></button>
                 </div>
             </div>
         </div>
