--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="btnw"><a href="">Entrar em contato</a></button>
+                        <button><a href="" class="btnw">Entrar em contato</a></button>
                     </div>
                 </div>
             </div>
