--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                         <div class="area_text">
                             <h1 class="p">Nome: Aj venturi</h1>
                             <h1>Tipo: Farmacia</h1>
+                            <h1>Codigo: 7632</h1>
                         </div>
                     </div>
                     <div class="area_conteudo">
@@ -124,6 +125,7 @@
                         <div class="area_text">
                             <h1 class="p">Nome: Esquina</h1>
                             <h1>Tipo: Lanchonete</h1>
+                            <h1>Codigo: 1485</h1>
                         </div>
                     </div>
                     <div class="area_conteudo">
@@ -133,6 +135,7 @@
                         <div class="area_text">
                             <h1 class="p">Nome: Doce Delicia</h1>
                             <h1>Tipo: Lanchonete</h1>
+                            <h1>Codigo: 9731</h1>
                         </div>
                     </div>
                     <div class="area_conteudo">
@@ -140,8 +143,9 @@
                             <img src="">
                         </div>
                         <div class="area_text">
-                            <h1>Nome: Doce Delicia</h1>
+                            <h1>Nome: Point do Açai</h1>
                             <h1>Tipo: Lanchonete</h1>
+                            <h1>Codigo:5802</h1>
                         </div>
                     </div>
                     <div class="area_conteudo">
@@ -151,33 +155,37 @@
                         <div class="area_text">
                             <h1>Nome: Aj venturi</h1>
                             <h1>Tipo: Farmacia</h1>
+                             <h1>Codigo:</h1>
                         </div>
                     </div>
-                    <div class="area_conteudo">
+                    <div class="area_conteudo as">
                         <div class="area_img">
                             <img src="AJ VENTURI-02.png">
                         </div>
                         <div class="area_text">
                             <h1>Nome: Aj venturi</h1>
                             <h1>Tipo: Farmacia</h1>
+                             <h1>Codigo:</h1>
                         </div>
                     </div>
-                    <div class="area_conteudo">
+                    <div class="area_conteudo as">
                         <div class="area_img">
                             <img src="AJ VENTURI-02.png">
                         </div>
                         <div class="area_text">
                             <h1>Nome: Aj venturi</h1>
                             <h1>Tipo: Farmacia</h1>
+                             <h1>Codigo:</h1>
                         </div>
                     </div>
-                    <div class="area_conteudo sb">
+                    <div class="area_conteudo sb as">
                         <div class="area_img">
                             <img src="AJ VENTURI-02.png">
                         </div>
                         <div class="area_text">
                             <h1>Nome: Aj venturi</h1>
                             <h1>Tipo: Farmacia</h1>
+                             <h1>Codigo:</h1>
                         </div>
                     </div>
                 </div>
