--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                             <h1>Codigo:5802</h1>
                         </div>
                     </div>
-                    <div class="area_conteudo">
+                    <div class="area_conteudo as">
                         <div class="area_img">
                             <img src="AJ VENTURI-02.png">
                         </div>
