--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                         <div class="area_text">
                             <h1 class="p">Nome: Aj venturi</h1>
                             <h1>Tipo: Farmacia</h1>
+                             <h1>Cidade: Pouso Redondo</h1>
                             <h1>Codigo: 7632</h1>
                         </div>
                     </div>
@@ -125,6 +126,7 @@
                         <div class="area_text">
                             <h1 class="p">Nome: Esquina</h1>
                             <h1>Tipo: Lanchonete</h1>
+                             <h1>Cidade: Pouso Redondo</h1>
                             <h1>Codigo: 1485</h1>
                         </div>
                     </div>
@@ -135,6 +137,7 @@
                         <div class="area_text">
                             <h1 class="p">Nome: Doce Delicia</h1>
                             <h1>Tipo: Lanchonete</h1>
+                             <h1>Cidade: Taio</h1>
                             <h1>Codigo: 9731</h1>
                         </div>
                     </div>
@@ -145,6 +148,7 @@
                         <div class="area_text">
                             <h1>Nome: Point do Açai</h1>
                             <h1>Tipo: Lanchonete</h1>
+                             <h1>Cidade: Pouso Redondo</h1>
                             <h1>Codigo:5802</h1>
                         </div>
                     </div>
