--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <button class="mg" onclick="btn('filtrar')">Filtrar</button>
+                            <button class="mg">Filtrar</button>
                         </div>
                     </div>
                 </div>
