--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="area_conteudo_filtro">
                         <div class="filtro">
                             <h1>FILTRO:</h1>
-                            <button onclick="btn('cidade')">CIDADE</button>
+                            <button onclick="btnn('cidade')">CIDADE</button>
                         </div>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <button class="mg">Filtrar</button>
+                            <button class="mg" onclick="btnn('cidade')">Filtrar</button>
                         </div>
                     </div>
                 </div>
