--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <button class="mg" onclick="btnn('cidade')">Filtrar</button>
+                            <button class="mg" onclick="btnn('Filtrar')">Filtrar</button>
                         </div>
                     </div>
                 </div>
