--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="area_conteudo_filtro">
                         <div class="filtro">
                             <h1>FILTRO:</h1>
-                            <button onclick="btnn('cidade')">CIDADE</button>
+                            <button onclick="btnn('CIDADE')">CIDADE</button>
                         </div>
                     </div>
                 </div>
