--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="area">
                     <div class="area_conteudo sm">
                         <div class="area_img">
-                            <img src="/img/logos/aj.png " alt="Logo da Farmacia aj venturi">
+                            <img src="img/logos/aj.png" alt="Logo da Farmacia aj venturi">
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Aj venturi</h1>
@@ -154,7 +154,7 @@
                     </div>
                     <div class="area_conteudo as">
                         <div class="area_img">
-                            <img src="AJ VENTURI-02.png">
+                            <img src="">
                         </div>
                         <div class="area_text">
                             <h1>Nome: Aj venturi</h1>
@@ -164,7 +164,7 @@
                     </div>
                     <div class="area_conteudo as">
                         <div class="area_img">
-                            <img src="AJ VENTURI-02.png">
+                            <img src="">
                         </div>
                         <div class="area_text">
                             <h1>Nome: Aj venturi</h1>
@@ -174,7 +174,7 @@
                     </div>
                     <div class="area_conteudo as">
                         <div class="area_img">
-                            <img src="AJ VENTURI-02.png">
+                            <img src="">
                         </div>
                         <div class="area_text">
                             <h1>Nome: Aj venturi</h1>
@@ -184,7 +184,7 @@
                     </div>
                     <div class="area_conteudo sb as">
                         <div class="area_img">
-                            <img src="AJ VENTURI-02.png">
+                            <img src="">
                         </div>
                         <div class="area_text">
                             <h1>Nome: Aj venturi</h1>
