arrumando o filtro, e colocando o for

--- a/index.html
+++ b/index.html
@@ -67,16 +67,16 @@
                                 </div>
                                 <div class="filtro_cidade_area">
                                     <div class="filtro_cidade">
-                                        <input type="radio" name="cidade" value="pousoredondo">
-                                        <label>Pouso Redondo</label>
+                                        <input type="radio" name="cidade" id="pr" value="pousoredondo">
+                                        <label for="pr">Pouso Redondo</label>
                                     </div>
                                     <div class="filtro_cidade">
-                                        <input type="radio" name="cidade" value="taio">
-                                        <label>Taió</label>
+                                        <input type="radio" name="cidade" id="ta" value="taio">
+                                        <label for="ta">Taió</label>
                                     </div>
                                     <div class="filtro_cidade">
-                                        <input type="radio" name="cidade" value="agrolandia">
-                                        <label>Agrolândia</label>
+                                        <input type="radio" name="cidade" id="ag" value="agrolandia">
+                                        <label for="ag">Agrolândia</label>
                                     </div>
                                 </div>
                             </div>
@@ -86,20 +86,20 @@
                                 </div>
                                 <div class="filtro_estabelecimento_area">
                                     <div class="filtro_estabelecimento">
-                                        <input type="radio" name="estabelecimento" value="farmacia">
-                                        <label>Farmacia</label>
+                                        <input type="radio" name="estabelecimento" id="far" value="farmacia">
+                                        <label for="far">Farmacia</label>
                                     </div>
                                     <div class="filtro_estabelecimento">
-                                        <input type="radio" name="estabelecimento" value="lanchonete">
-                                        <label>lachonete</label>
+                                        <input type="radio" name="estabelecimento" id="lac" value="lanchonete">
+                                        <label for="lac">lachonete</label>
                                     </div>
                                     <div class="filtro_estabelecimento">
-                                        <input type="radio" name="estabelecimento" value="postog">
-                                        <label>Posto de Gasolina</label>
+                                        <input type="radio" name="estabelecimento" id="pg" value="postog">
+                                        <label for="pg">Posto de Gasolina</label>
                                     </div>
                                 </div>
                             </div>
-                            <button class="mg" onclick="btnn('removefiltro')">Remover Filtro</button>
+                            <button class="rf" onclick="btnn('removefiltro')">Remover Filtro</button>
                             <button class="mg" onclick="btnn('Filtrar')">Filtrar</button>
                         </div>
                     </div>
@@ -116,7 +116,7 @@
                         <div class="area_text">
                             <h1 class="p">Nome: Aj venturi</h1>
                             <h1 class="tiponame" data-estabelecimento="farmacia">Tipo: Farmacia</h1>
-                             <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Pouso Redondo</h1>
+                            <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Pouso Redondo</h1>
                             <h1>Codigo: 7632</h1>
                         </div>
                     </div>
@@ -127,7 +127,7 @@
                         <div class="area_text">
                             <h1 class="p">Nome: Esquina</h1>
                             <h1 class="tiponame" data-estabelecimento="lanchonete">Tipo: Lanchonete</h1>
-                             <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Pouso Redondo</h1>
+                            <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Pouso Redondo</h1>
                             <h1>Codigo: 1485</h1>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                         <div class="area_text">
                             <h1 class="p">Nome: Doce Delicia</h1>
                             <h1 class="tiponame" data-estabelecimento="lanchonete">Tipo: Lanchonete</h1>
-                             <h1 class="cidadename" data-cidade="taio">Cidade: Taio</h1>
+                            <h1 class="cidadename" data-cidade="taio">Cidade: Taio</h1>
                             <h1>Codigo: 9731</h1>
                         </div>
                     </div>
@@ -149,7 +149,7 @@
                         <div class="area_text">
                             <h1>Nome: Point do Açai</h1>
                             <h1>Tipo: Lanchonete</h1>
-                             <h1>Cidade: Pouso Redondo</h1>
+                            <h1>Cidade: Pouso Redondo</h1>
                             <h1>Codigo:5802</h1>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                         <div class="area_text">
                             <h1>Nome: Aj venturi</h1>
                             <h1>Tipo: Farmacia</h1>
-                             <h1>Codigo:</h1>
+                            <h1>Codigo:</h1>
                         </div>
                     </div>
                     <div class="area_conteudo as">
@@ -170,7 +170,7 @@
                         <div class="area_text">
                             <h1>Nome: Aj venturi</h1>
                             <h1>Tipo: Farmacia</h1>
-                             <h1>Codigo:</h1>
+                            <h1>Codigo:</h1>
                         </div>
                     </div>
                     <div class="area_conteudo as">
@@ -180,7 +180,7 @@
                         <div class="area_text">
                             <h1>Nome: Aj venturi</h1>
                             <h1>Tipo: Farmacia</h1>
-                             <h1>Codigo:</h1>
+                            <h1>Codigo:</h1>
                         </div>
                     </div>
                     <div class="area_conteudo sb as">
@@ -190,7 +190,7 @@
                         <div class="area_text">
                             <h1>Nome: Aj venturi</h1>
                             <h1>Tipo: Farmacia</h1>
-                             <h1>Codigo:</h1>
+                            <h1>Codigo:</h1>
                         </div>
                     </div>
                 </div>
