GIT ARRUMANDO AS LOGO
GIT ARRUMANDO AS LOGO, DEIXANDO MELHOR CADA LOGO

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     </div>
                     <div class="area_conteudo">
                         <div class="area_img">
-                            <img src="img/logos/docedelicia.jpg">
+                            <img src="img/logos/docedelicia.png">
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Doce Delicia</h1>
@@ -144,12 +144,12 @@
                     </div>
                     <div class="area_conteudo">
                         <div class="area_img">
-                            <img src="">
+                            <img src="img/logos/POINT.png">
                         </div>
                         <div class="area_text">
-                            <h1>Nome: Point do Açai</h1>
-                            <h1>Tipo: Lanchonete</h1>
-                            <h1>Cidade: Pouso Redondo</h1>
+                            <h1 class="p">Nome: Point do Açai</h1>
+                            <h1 class="tiponame" data-estabelecimento="lanchonete">Tipo: Lanchonete</h1>
+                            <h1 class="cidadename" data-cidade="pousoredondo">Cidade: Pouso Redondo</h1>
                             <h1>Codigo:5802</h1>
                         </div>
                     </div>
