ajustando o css e js

--- a/index.html
+++ b/index.html
@@ -213,6 +213,8 @@
                                 <div class="content_endereço_body">
                                     <h1>Endereço:</h1>
                                     <h1 class="rua"></h1>
+                                    <h1>Número:</h1>
+                                    <h1 class="num"></h1>
                                     <h1>Bairro:</h1>
                                     <h1 class="bairro"></h1>
                                 </div>
