--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
+    <link rel="icon" href="img/logos/favicon_io/favicon-32x32.png" type="image/x-icon">
     <title>Star Descontos</title>
 </head>
 
