--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
     <link rel="icon" href="img/logos/favicon_io/favicon-32x32.png" type="image/x-icon">
+    <!-- Ícone para iOS -->
+    <link rel="apple-touch-icon" sizes="180x180" href="img/logos/favicon_io/apple-touch-icon.png">
+    <!-- Ícone para Android -->
+    <link rel="manifest" href="img/logos/favicon_io/android-chrome-512x512.png">
     <title>Star Descontos</title>
 </head>
 
