--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             <h1>Codigo: 9731</h1>
                         </div>
                     </div>
-                    <div class="area_conteudo">
+                    <div class="area_conteudo sb">
                         <div class="area_img">
                             <img src="img/logos/POINT.png">
                         </div>
